--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,4 +9,5 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "42.0"
   "oauthLocalPort" : "1919"
+  "oauthLocalPort" : "1717"
 }
