--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,10 @@ jobs:
             - run:
                 name: Deploy Metadata Bundle to target org
                 command: sfdx force:mdapi:deploy -u deployTarget -d src-$CIRCLE_BUILD_NUM -l RunLocalTests -w 10
+            - run:
+                name: Fastlane
+                command: bundle exec fastlane $FASTLANE_LANE
+                no_output_timeout: 60m
 
 workflows:
   version: 2
