--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,9 @@ jobs:
                 name: Authenticate Deploy Target
                 command: |
                     echo $DEPLOY_URL > ~/tmp/orgs/mastertarget.auth
-                    sfdx force:auth:sfdxurl:store -f ~/tmp/orgs/mastertarget.auth -s -a deployTarget
+                    sfdx force:auth:jwt:grant --clientid 3MVG9uGEVv_svxtJWuzYyhPVQ8H3x8n2tjILs7bJkbTqVwOTWXiheG.DM6K9W_6JUx5rMQtPNBLop5xuyPWZe \
+--jwtkeyfile /Users/niravdesai/server.key --username  \ndesai@coinbasedemo1.org
+--instanceurl https://login.salesforce.com
             - run:
                 name: Convert SFDX source to Metadata Bundle
                 command: sfdx force:source:convert -d src-$CIRCLE_BUILD_NUM
